--- a/index.html
+++ b/index.html
@@ -6,7 +6,49 @@
 		<title>Mi Primer Sitio</title>
 	</head>
 	<body>
-		Me dicen Jose porque es el apodo que más me gusta
+		<header>
+			<h1>
+				Mi primer sitio
+			</h1>
+			<div>HEADER</div>
+		</header>
+
+		<SECTION>
+			<div>
+				sección 1
+			<div>
+			<article>
+				<p>
+					Esto es un <strong>
+					párrafo</strong>.
+					Este es el <a href="
+					http://google.com"
+					title="Google" target
+					="_blank">enlace</a>.
+
+				</p>
+				<p>
+					Esto es un <em>
+					párrafo</em> 02.
+				</p>
+				<img src="https://d328k6xhl3lmif.cloudfront.net/images/default-source/default-album/logo-uc-02.png?sfvrsn=5e181ff0_0" width="100"/>
+				<img scr="imgs/imagen.jpg"
+				"width=100" />
+
+				<ol>
+					<li>Item 1</li> 
+					<li>Item 2</li>
+				</ol>
+				
+			</article>
+		</SECTION>
+			<div>
+				Mi contenido
+			</div>
+			<footer>
+				Footer
+			</footer>
 	</body>
 </html>
+
 
